# forager-app

./: .env.example  .gitignore  README.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py  rate_limit.py
backend/app/agents/: orchestrator.py  safety_agent.py  weather_agent.py
backend/app/api/: __init__.py
backend/app/api/routes/: auth.py  discoveries.py  forage_stream.py  health.py  locations.py  utilities.py  weather.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py  passwords.py
backend/app/data/nutrition/: nutrition_data.json
backend/app/data/safety/: knowledge_base.json  lookalikes.json  protected_species.json
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 238dc6f26cd0_create_users_and_discoveries_tables.py  61bc1a0c105b_add_heatmap_url_to_discoveries.py  6fa432ac08cd_add_saved_locations_table.py  a7c3e9f1b204_add_oauth_unique_constraint.py  b1a4e7f39c02_add_enrichment_status_to_discoveries.py  e346042376c0_add_plant_knowledge_table.py
backend/app/middleware/: security_headers.py
backend/app/models/: discoveries.py  locations.py  plant_knowledge.py  users.py
backend/app/schemas/: auth.py  common.py  discoveries.py  locations.py  users.py  weather.py
backend/app/services/: classifier.py  discovery.py  geocoding.py  nutrition_data.py  safety_data.py  weather.py
backend/tests/: conftest.py  test_auth.py  test_discoveries.py  test_health.py  test_jwt.py  test_locations.py  test_nutrition_agent.py  test_passwords.py  test_safety_agent.py  test_transform.py  test_weather_agent.py  test_weather_forecast.py
frontend/: .dockerignore  .gitignore  Dockerfile  components.json  index.html  nginx.conf  package.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  components.css  index.css  main.tsx
frontend/src/components/: BottomNav.tsx  Layout.tsx  LoadingSpinner.tsx  NavBar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: utils.ts
frontend/src/libs/: api.ts  session.ts  sse.ts
frontend/src/pages/: AuthCallBackPage.tsx  DiscoveryDetailPage.tsx  HomePage.tsx  (+7 more)
ml/: pyproject.toml
ml/configs/: train_config.json
ml/data/splits/: class_map.json
ml/scripts/: download_inat.py  export_onnx.py  extract_species.py  split.py
ml/training/: dataset.py  train_b7_v3.py  train_lite4.py
(+15 files in other folders)
